--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "../src/images/favicon-32x32.png",
+      "src": "/favicon-32x32.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/png"
     },
     {
-      "src": "../src/images/android-chrome-192x192.png",
+      "src": "/android-chrome-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "../src/images/android-chrome-256x256.png",
+      "src": "/android-chrome-256x256.png",
       "type": "image/png",
       "sizes": "512x512"
     }
