--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.5",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.7",
     "zod": "^3.22.2"
   },
   "devDependencies": {
