--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ant": "^0.2.0",
+    "antd": "^5.11.5",
     "axios": "^1.5.0",
+    "bootstrap-icons": "^1.11.2",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-calendar": "^4.6.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4",
     "zod": "^3.22.2"
   },
