--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tsparticles/react": "^3.0.0",
     "ant": "^0.2.0",
     "antd": "^5.11.5",
     "axios": "^1.5.0",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.1",
+    "tsparticles": "^3.3.0",
     "web-vitals": "^2.1.4",
     "zod": "^3.22.2"
   },
