--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.3.1",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tsparticles/react": "^3.0.0",
+    "@zegocloud/zego-uikit-prebuilt": "^2.0.1",
     "ant": "^0.2.0",
     "antd": "^5.11.5",
     "axios": "^1.5.0",
@@ -21,6 +26,7 @@
     "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "styled-components": "^6.1.1",
     "tsparticles": "^3.3.0",
     "web-vitals": "^2.1.4",
